# rh-techday-2026

./: .gitignore  CLAUDE.md  LICENSE  README.md
app1-recipes/: main.py  requirements.txt
app1-recipes/static/: index.html
app2-gardening/: main.py  requirements.txt  weather.py
app2-gardening/static/: index.html
app3-chatbot/: auth.py  database.py  main.py  requirements.txt
app3-chatbot/static/: index.html
infra/: .env.example  Dockerfile.app  docker-compose.yml  init.sql
plans/: plan-app1-recipes.md  plan-app2-gardening.md  plan-app3-chatbot.md  plan-shared-and-infra.md
shared/: llm_client.py  pyproject.toml  telemetry.py
